# nhsdigital.reasonable-adjustments-api

./: .gitignore  Makefile  README.md  azure-pipelines.yml  ecs-proxies-containers.yml  ecs-proxies-deploy-sandbox.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: pr-lint.yaml
api_tests/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker.env.sample  pytest.ini  requirements.txt
api_tests/config_files/: config.py  environments.py
api_tests/performance/: README.md  auth.py  locustfile.py  pyproject.toml
api_tests/scripts/: apigee_api.py  authenticator.py  generic_request.py  response_bank.py  switch_app.py
api_tests/solution_assurance/: proxyscript.py
api_tests/steps/: check_oauth.py  check_reasonable_adjustments.py
api_tests/tests/: conftest.py  pytest.ini  request_bank.py  utils.py
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: tests-int.yml  tests.yml
docker/reasonable-adjustment-flag/: Makefile  package.json
docker/reasonable-adjustment-flag-sandbox/: Makefile  README.md  package-lock.json  package.json
docker/reasonable-adjustments/: Dockerfile  package.json
docker/reasonable-adjustments-sandbox/: package.json
proxies/live/: Makefile
scripts/: build_proxy.sh
specification/: reasonable-adjustment-flag.yaml  reasonable-adjustments.yaml
specification/solution_assurance/: proxyscript.py
terraform/: main.tf
tests/: package-lock.json  package.json
(+191 files in other folders)
