[project]
python = "^3.8"


[tool.poetry]
name = "apim-definitions"
version = "0.0.1-alpha"
description = "Reasonable Adjustments API Definitions"

license = "MIT"

authors = [
    "Paul Walkington <paul.walkington1@nhs.net>"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/reasonable-adjustments-api"
homepage = ""

keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.0.5"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
pip-licenses = "^2.0.1"
jinja2 = "^2.11.2"
pytest = "^5.4.2"
bandit = "^1.6.2"


[tool.poetry.scripts]
